code edited for multithreading testing